fixed the overflow problem

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -18,6 +18,7 @@ body {
   color: $grayishBlue;
   line-height: 1.3;
   min-height: 300vh;
+  overflow-x: hidden;
 
   @include breakpoints-up(large) {
     font-size: $font-med;
